# Numerical-Methods-Project

./: .gitignore  CMakeLists.txt  build.sh  dataset1.csv  run_simulations.sh
shaders/: background.frag  background.vert  bloom_blur.frag  bloom_composite.frag  bloom_extract.frag  comet.frag  comet.vert  grid.frag  grid.vert  heatmap.frag  heatmap.vert  line.frag  line.vert  marker.frag  marker.vert  point.frag  point.vert  quad.vert  quad_uv.vert  text.frag  text.vert
src/: heatmap_view.cpp  heatmap_view.hpp  main.cpp  physics.cpp  physics.hpp  post_process.cpp  post_process.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  text_renderer.cpp  text_renderer.hpp
